--- a/bikeshare.ipynb
+++ b/bikeshare.ipynb
@@ -341,6 +341,7 @@
     "        if response.lower() not in ['yes', 'y']:\n",
     "            break\n",
     "        print(df.head())\n",
+    "        # reassign new data frame (start from 5th row to the last row including all columns) which is sliced from the original data frame
     "        df = df.iloc[5:, ]\n",
     "\n",
     "\n",
